# Gold-commodity-exchange

./: .gitignore  Dockerfile  Dockerfile.consolidated  LICENSE  README.md  docker-compose.yml  nginx.conf  supervisord.conf
.devcontainer/: devcontainer.json
DB/: Readme.md  db.env  docker-compose.yml
MatchingEngine/: CMakeLists.txt  README.md  docker-compose.yml
MatchingEngine/cppkafka/: CMakeLists.txt  README.md  cmake_uninstall.cmake
MatchingEngine/cppkafka/src/lib/: libcppkafka.0.4.1.dylib  libcppkafka.dylib
MatchingEngine/cppkafka/tests/: kafka_handle_base_test.cpp
MatchingEngine/include/core/: IMatchingStrategy.hpp  Order.hpp  OrderBook.hpp  OrderFactory.hpp  StrategyFactory.hpp
MatchingEngine/include/core/strategies/: BuyLimitStrategy.hpp  BuyMarketStrategy.hpp  SellLimitStrategy.hpp  SellMarketStrategy.hpp
MatchingEngine/include/dto/: OrderData.hpp
MatchingEngine/include/kafka/: KafkaLTPProducer.hpp  KafkaOrderBookProducer.hpp  KafkaOrderConsumer.hpp  KafkaStatusProducer.hpp  KafkaTradeProducer.hpp
MatchingEngine/include/models/: LTP.hpp  OrderBookSnapshot.hpp  Status.hpp  Trade.hpp
MatchingEngine/include/service/: OrderMatchingService.hpp
MatchingEngine/package/: cppkafka.pc
MatchingEngine/src/core/: IMatchingStrategy.cpp  Order.cpp  OrderBook.cpp  OrderFactory.cpp  StrategyFactory.cpp
MatchingEngine/src/core/strategies/: BuyLimitStrategy.cpp  BuyMarketStrategy.cpp  SellLimitStrategy.cpp  SellMarketStrategy.cpp
MatchingEngine/src/kafka/: KafkaLTPProducer.cpp  KafkaOrderBookProducer.cpp  KafkaOrderConsumer.cpp  KafkaStatusProducer.cpp  KafkaTradeProducer.cpp
MatchingEngine/src/models/: LTP.cpp  OrderBookSnapshot.cpp  Status.cpp  Trade.cpp
MatchingEngine/src/service/: OrderMatchingService.cpp
backend/: docker-compose.yml  pom.xml  readme.md
backend/auth-service/: Dockerfile  pom.xml
backend/goldexchange-backend/: pom.xml
backend/trade-service/: Dockerfile  pom.xml
backend/wallet-service/: Dockerfile  pom.xml
fronend-new/: index.html
fronend-new/src/components/auth/: CountryCodeSelect.tsx
fronend-new/src/components/trading/: TradeHistory.tsx  TradingInterface.tsx
fronend-new/src/pages/: Index.tsx
fronend-new/src/types/: trading.ts
frontend/: Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json
frontend-new/: package-lock.json  package.json  vite.config.ts
frontend-new/src/: App.tsx  index.css
frontend-new/src/components/auth/: CountryCodeSelect.tsx  LoginForm.tsx  SignUpPage.tsx
frontend-new/src/components/dashboard/: Dashboard.tsx  Navbar.tsx  Portfolio.tsx  WalletManager.tsx
frontend-new/src/components/landing/: LandingPage.tsx
frontend-new/src/components/trading/: OrderBook.tsx  TradeHistory.tsx  TradePosition.tsx  TradingForm.tsx  TradingInterface.tsx
frontend-new/src/components/ui/: toaster.tsx
frontend-new/src/hooks/: use-toast.ts  useLtp.ts  useOrderBook.ts
frontend-new/src/lib/: ConnectWebSocket.ts  axios.ts
frontend-new/src/pages/: Index.tsx
frontend-new/src/store/: useAuthStore.ts
frontend-new/src/types/: auth.ts
frontend/client/: README.md  package-lock.json  package.json
frontend/client/src/: App.jsx  main.jsx
frontend/client/src/components/: Navbar.jsx
frontend/client/src/pages/: AboutPage.jsx  AddMoneyPage.jsx  HomePage.jsx  LoginPage.jsx  ProfilePage.jsx  SignUpPage.jsx  TradingPage.jsx  VerifyTOTPPage.jsx  WithdrawMoneyPage.jsx
frontend/src/: App.tsx
frontend/src/components/auth/: CountryCodeSelect.tsx  LoginForm.tsx  OTPInput.tsx  SignUpPage.tsx
frontend/src/components/dashboard/: Dashboard.tsx  (+3 more)
frontend/src/hooks/: useLtp.ts  useOrderBook.ts  useToastSocket.ts
frontend/src/lib/: ConnectWebSocket.ts  axios.ts
frontend/src/pages/: NotFound.tsx
frontend/src/store/: useAuthStore.ts
frontend/src/types/: auth.ts  trading.ts
k8s/: namespace.yaml  readme.md
k8s/DB/: deployment.yaml  service.yaml
k8s/MatchingEngine/: deployment.yaml  service.yaml
k8s/backend/auth/: deployment.yaml  service.yaml
k8s/backend/trade/: deployment.yaml  service.yaml
k8s/backend/wallet/: deployment.yaml  service.yaml
k8s/frontend/: deployment.yaml  service.yaml
k8s/kafka/: kafka-deployment.yaml  kafka-service.yaml  zookeeper-deployment.yaml
kafka/: README.md  docker-compose.kafka.yml  kafka.env  script.sh
matcher/: .dockerignore  CMakeLists.txt  Dockerfile  MatchingEngine  README.md  docker-compose.yml
matcher/include/core/: IMatchingStrategy.hpp  Order.hpp  OrderBook.hpp
matcher/include/core/strategies/: BuyLimitStrategy.hpp  BuyMarketStrategy.hpp  SellLimitStrategy.hpp  SellMarketStrategy.hpp
matcher/include/dto/: OrderData.hpp  order.pb.cc  order.pb.h  order.proto
matcher/include/kafka/: KafkaOrderConsumer.hpp  KafkaStatusProducer.hpp
matcher/include/models/: LTP.hpp  OrderBookSnapshot.hpp  Status.hpp  Trade.hpp
matcher/include/service/: OrderMatchingService.hpp
matcher/src/: CMakeLists.txt  main.cpp
matcher/src/core/: IMatchingStrategy.cpp  Order.cpp  OrderBook.cpp  OrderFactory.cpp
matcher/src/core/strategies/: BuyLimitStrategy.cpp  BuyMarketStrategy.cpp  SellLimitStrategy.cpp  SellMarketStrategy.cpp
matcher/src/include/core/: IMatchingStrategy.hpp  Order.hpp  OrderBook.hpp  OrderFactory.hpp
matcher/src/include/core/strategies/: BuyLimitStrategy.hpp  BuyMarketStrategy.hpp  SellMarketStrategy.hpp
matcher/src/include/kafka/: KafkaLTPProducer.hpp  KafkaOrderBookProducer.hpp  KafkaOrderConsumer.hpp
matcher/src/include/models/: OrderBookSnapshot.hpp  Trade.hpp
matcher/src/include/service/: OrderMatchingService.hpp
matcher/src/kafka/: KafkaLTPProducer.cpp  KafkaOrderBookProducer.cpp  KafkaOrderConsumer.cpp  KafkaStatusProducer.cpp  KafkaTradeProducer.cpp
matcher/src/models/: LTP.cpp  OrderBookSnapshot.cpp  Status.cpp  Trade.cpp
matcher/src/service/: OrderMatchingService.cpp
matcher/src/src/core/: OrderFactory.cpp
matcher/src/src/core/strategies/: BuyMarketStrategy.cpp  SellMarketStrategy.cpp
matcher/src/src/models/: OrderBookSnapshot.cpp
matcher/src/src/service/: OrderMatchingService.cpp
(+122 files in other folders)
